Chapter 9 — Listing 9.7: DurationAndPeriod.java Demonstrates: Duration for machine elapsed time and Period for calendar elapsed time